
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ UInt32 ;
struct TYPE_3__ {int * isRepG2; scalar_t__* isRepG1; scalar_t__** isRep0Long; scalar_t__* isRepG0; } ;
typedef TYPE_1__ CLzmaEnc ;


 scalar_t__ GET_PRICE (int ,unsigned int) ;
 scalar_t__ GET_PRICE_0 (scalar_t__) ;
 scalar_t__ GET_PRICE_1 (scalar_t__) ;

__attribute__((used)) static UInt32 GetPrice_PureRep(const CLzmaEnc *p, unsigned repIndex, size_t state, size_t posState)
{
  UInt32 price;
  UInt32 prob = p->isRepG0[state];
  if (repIndex == 0)
  {
    price = GET_PRICE_0(prob);
    price += GET_PRICE_1(p->isRep0Long[state][posState]);
  }
  else
  {
    price = GET_PRICE_1(prob);
    prob = p->isRepG1[state];
    if (repIndex == 1)
      price += GET_PRICE_0(prob);
    else
    {
      price += GET_PRICE_1(prob);
      price += GET_PRICE(p->isRepG2[state], repIndex - 2);
    }
  }
  return price;
}
